--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -255,26 +255,7 @@
     letter-spacing: 0.5px;
     position: relative;
     overflow: hidden;
-
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: -100%;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(
-        90deg,
-        transparent,
-        glass-white(0.2),
-        transparent
-      );
-      transition: left 0.5s;
-    }
-
-    &:hover::before {
-      left: 100%;
-    }
+    // Shine effect removed to avoid visible box behind containers
 
     @media (min-width: 992px) {
       width: max-content;
